--- a/html/css/Main.css
+++ b/html/css/Main.css
@@ -1,4 +1,5 @@
 .film{
-    background-image: url("../images/logo-film.jpg");
     width: 50%;
+    height: 10%;
+    background-image: url("../images/logo-film.jpg");
 }
