--- a/html/css/Main.css
+++ b/html/css/Main.css
@@ -1,5 +1,31 @@
+body, html{
+    width: 100%;
+    height: 100%;
+    overflow-x      : hidden;
+}
+
 .film{
-    width: 50%;
-    height: 10%;
+    
     background-image: url("../images/logo-film.jpg");
+    
+}
+
+.categorie{
+    margin-right: 50px;
+    margin-bottom: 50px;
+    width: 250px;
+    height:250px;
+    text-align: center;
+
+}
+
+.global{
+    width: 100%;
+    height: 90%;
+    position: absolute;
+    top: 10%;
+}
+
+a{
+    text-decoration: none;
 }
