--- a/html/css/Main.css
+++ b/html/css/Main.css
@@ -2,12 +2,20 @@ body, html{
     width: 100%;
     height: 100%;
     overflow-x      : hidden;
+    background-color: darkgrey;
 }
 
-.film{
-    
+.film{ 
     background-image: url("../images/logo-film.jpg");
-    
+}
+
+
+
+.global{
+    width: 100%;
+    height: 90%;
+    position: absolute;
+    top: 10%;
 }
 
 .categorie{
@@ -19,13 +27,23 @@ body, html{
 
 }
 
-.global{
-    width: 100%;
-    height: 90%;
-    position: absolute;
-    top: 10%;
+strong{
+    top: 50%;
+    position: relative;
+    bottom: 50%;
 }
 
-a{
+a, a:visited{
     text-decoration: none;
+    color: white;
+    font-size: xx-large;
+}
+
+a:hover{
+    color: blue;
+    transition: color 1s;
+    -webkit-transition: color 1s;
+    -moz-transition: color 1s;
+    -ms-transition: color 1s;
+    -o-transition: color 1s;
 }
