--- a/html/css/Main.css
+++ b/html/css/Main.css
@@ -5,10 +5,21 @@ body, html{
     background-color: darkgrey;
 }
 
+hr{
+    border: none;
+    border-top: 3px thin #333;
+    height: 5px;
+}
+
+strong{
+    top: 50%;
+    position: relative;
+    bottom: 50%;
+}
+
 .film{ 
     background-image: url("../images/logo-film.jpg");
 }
-
 
 
 .global{
@@ -27,11 +38,7 @@ body, html{
 
 }
 
-strong{
-    top: 50%;
-    position: relative;
-    bottom: 50%;
-}
+
 
 a, a:visited{
     text-decoration: none;
