--- a/html/css/Main.css
+++ b/html/css/Main.css
@@ -2,14 +2,23 @@ body, html{
     width: 100%;
     height: 100%;
     overflow-x      : hidden;
+    overflow-y      : hidden;
     background-color: darkgrey;
 }
 
-hr{
-    border: none;
-    border-top: 3px thin #333;
-    height: 5px;
+nav{
+    width: 100%;
+    background-color: #635551;
+    position:absolute;
+    top: 0%;
+    right: 0%;
+    padding-top: 0.5%;
 }
+
+nav img{
+    margin-left: 2%;
+}
+
 
 strong{
     top: 50%;
@@ -17,9 +26,7 @@ strong{
     bottom: 50%;
 }
 
-.film{ 
-    background-image: url("../images/logo-film.jpg");
-}
+
 
 
 .global{
@@ -27,12 +34,16 @@ strong{
     height: 90%;
     position: absolute;
     top: 10%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-around;
 }
 
 .categorie{
     margin-right: 50px;
     margin-bottom: 50px;
-    width: 250px;
+    width: 40%;
     height:250px;
     text-align: center;
 
@@ -54,4 +65,25 @@ a:hover{
     -moz-transition: color 1s;
     -ms-transition: color 1s;
     -o-transition: color 1s;
+}
+
+#logoHome{
+    width: 32px;
+    height: 32px;
+}
+
+.film{ 
+    background-image: url("../images/logo-film.jpg");
+}
+
+.serie{ 
+    background-image: url("../images/logo-film.jpg");
+}
+
+.music{ 
+    background-image: url("../images/logo-film.jpg");
+}
+
+.anime{ 
+    background-image: url("../images/logo-film.jpg");
 }
